2014-09-16  Ramon Casero  <rcasero@gmail.com>

	* Rename matlab/ItkToolbox/elastix_compose_transf.m as
	matlab/ItkToolbox/elastix_compose_afftransf.m:
	* matlab/CardiacToolbox/blockface_correct_frame_shifts.m: (0.1.1)
	* matlab/ItkToolbox/elastix_transf_imcoord2.m: (0.1.1)
	* Rename matlab/test/test_elastix_compose_transf.m as
	matlab/test/test_elastix_compose_afftransf.m:

	- elastix/transformix work also with transforms that are not
	affine (e.g. B-spline), so this function name is misleading.

	* matlab/ItkToolbox/elastix_read_file2param.m: (0.2.0)

	- Enable nested transforms.

	* matlab/ItkToolbox/elastix_write_param2file.m: (0.2.0)

	- Enable nested transforms.

2014-09-05  Ramon Casero  <rcasero@gmail.com>

	* matlab/ItkToolbox/elastix.m: (0.3.1)

	- Kind of fix bug, but not completely. When an initial transform
	is provided, the result transform provided by elastix links to it
	in field t.InitialTransformParametersFileName. When the initial
	transform is provided as a struct, this means that we return a
	link to a temp file that has been deleted.

	Here, we are going to always return
	t.InitialTransformParametersFileName='NoInitialTransform', but
	this is just a quick fix because I won't be able to work on this
	for the next week. What we have to do next is allow for nesting in
	the t struct. I.e., t.InitialTransformParametersFileName=t0, where
	t0 is another transform struct.

2014-09-02  Ramon Casero  <rcasero@gmail.com>

	* matlab/ItkToolbox/elastix_read_reg_output.m: (0.2.1)

	- Minor. Struct field was lowercase instead of uppercase.

	* matlab/ItkToolbox/elastix.m: (0.3.0)

	- Add optional parameters: 't0' to provide an initial transform to
	apply to the image before the registration. 'fMask', 'mMask' to
	provide masks for the fixed and moving image.

	* matlab/ItkToolbox/transformix.m: (0.2.1)

	- Fix bug. When image was grayscale, imfile was not a cell array,
	but it was indexed as such.

	* matlab/ItkToolbox/transformix.m: (0.2.0)
